--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Material3ExpressiveList</string>
+    <string name="button_groups">Button Groups</string>
 </resources>
