--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,16 @@
     <string name="work">Work</string>
     <string name="restaurant">Restaurant</string>
     <string name="coffee">Coffee</string>
+    <string name="leading_button">Leading Button</string>
+    <string name="edit_button">Edit Button</string>
+    <string name="my_button">My Button</string>
+    <string name="toggle_button">Toggle Button</string>
+    <string name="trailing_icon_rotation">Trailing Icon Rotation</string>
+    <string name="trailing_icon">Trailing icon</string>
+    <string name="edit">Edit</string>
+    <string name="settings">Settings</string>
+    <string name="settings_button">Settings Button</string>
+    <string name="send_feedback">Send Feedback</string>
+    <string name="send_feedback_button">Send Feedback Button</string>
+    <string name="f11">F11</string>
 </resources>
